# Rtc-REST

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build-Documentation.yml  CLANG-Ubuntu.yml  Construct-Vcpkg-Info.yml  GCC-MacOS.yml  MSVC-Windows-Binaries.yml  MSVC-Windows.yml
BuildTools/: make_vcpkg.php
BuildTools/Classes/Packager/: Vcpkg.php
Documentation/Doxygen/: Doxyfile  Doxyfile.bak
Documentation/Doxygen/Custom/: header.html
Documentation/Doxygen/Docs/: Index.md
Documentation/Doxygen/Docs/documentation_examples/application_commands/: Batch Edit Guild Application Command Permissions.md  Bulk Overwrite Global Application Commands.md  Bulk Overwrite Guild Application Commands.md  Creating a Global Application Command.md  Creating a Guild Application Command.md  Deleting a Global Application Command.md  Deleting a Guild Application Command.md  Editing Guild Application Command Permissions.md  Editing a Global Application Command.md  Editing a Guild Application Command.md  Get Global Application Commands.md  Get Guild Application Command.md  Get Guild Application Commands.md  Getting Guild Application Command Permissions.md  Getting a Global Application Command.md  Getting a Single Application Command Permissions.md
Documentation/Doxygen/Docs/documentation_examples/auto_moderation_rules/: Create Auto-Moderation-Rule.md  Delete Auto-Moderation-Rule.md  Get Audo-Moderation-Rule.md  List Auto-Moderation-Rules.md  Modify Auto-Moderation-Rule.md
Documentation/Doxygen/Docs/documentation_examples/autocompletes/: Collecting Autocomplete Input.md  Instantiating-Creating Autocomplete.md
Documentation/Doxygen/Docs/documentation_examples/buttons/: Collecting Button Input.md  Instantiating-Creating a Button.md
Documentation/Doxygen/Docs/documentation_examples/channels/: Creating a Channel Invite.md  Creating a Direct-Message.md  Creating a Guild Channel.md  Deleting Permission Overwrites.md  Deleting a Channel.md  Editing Channel Permission Overwrites.md  Following a News Channel.md  Getting Channel Invites.md  Getting Guild Channels.md  Getting Voice Regions.md  Getting a Channel.md  Getting a Direct-Message Channel.md  Modifying Guild Channel Positions.md  Modifying a Channel.md  Triggering the Typing Indicator.md
Documentation/Doxygen/Docs/documentation_examples/general_usage/: Listening for a Discord Event.md  Running a Command.md  Running a Function on a Timer.md  Using a Message Collector.md
Documentation/Doxygen/Docs/documentation_examples/guild_members/: Adding a Guild Member.md  Getting a Guild Member.md  Listing Guild Members.md  Modifying a Guild Member.md  Modifying the Current Guild Member.md  Removing a Guild Member.md  Searching Guild Members.md
Documentation/Doxygen/Docs/documentation_examples/guild_scheduled_events/: Creating a Guild Scheduled Event.md  Deleting a Guild Scheduled Event.md  Getting Guild Scheduled Event Users.md  Getting a Guild Scheduled Event.md  Getting a List of Guild Scheduled Events.md  Modifying a Guild Scheduled Event.md
Documentation/Doxygen/Docs/documentation_examples/guilds/: Beginning a Guild Prune.md  Creating a Guild Ban.md  Creating a Guild Template.md  Creating a Guild from a Template.md  Creating a Guild.md  Deleting a Guild Integration.md  Deleting a Guild Template.md  Deleting a Guild.md  Getting All Guilds.md  Getting Audit Logs.md  Getting Current User's Guilds.md  Getting Guild Bans.md  Getting Guild Integrations.md  Getting Guild Invites.md  Getting Guild Templates.md  Getting Guild Voice Regions.md  Getting Guild Widget Settings.md  Getting a Guild Ban.md  Getting a Guild Preview.md  Getting a Guild Prune Count.md  Getting a Guild Template.md  Getting a Guild Vanity Invite.md  Getting a Guild Welcome Screen.md  Getting a Guild Widget Image.md  Getting a Guild Widget.md  Getting a Guild.md  Getting an Invite.md  Leaving a Guild.md  Modifying a Guild Tempalte.md  Modifying a Guild Welcome Screen.md  Modifying a Guild Widget.md  Modifying a Guild.md  Removing a Guild Ban.md  Syncing a Guild Template.md
Documentation/Doxygen/Docs/documentation_examples/input_events/: Creating an Interaction Response.md  Deleting an Interaction Response.md  Editing an Interaction Response.md
Documentation/Doxygen/Docs/documentation_examples/interactions/: Creating a Follow-Up Message.md  Creating an Interaction Response.md  Deleting a Follow-Up Message.md  Deleting an Interaction Response.md  Editing a Follow-Up Message.md  Editing an Interaction Response.md  Getting a Follow-Up Message.md  Getting an Interaction Response.md
Documentation/Doxygen/Docs/documentation_examples/login_setup/: Adding a Command.md  Login-Instantiation.md  beginnernotes.md
Documentation/Doxygen/Docs/documentation_examples/messages/: Bulk Deleting Messages.md  Creating a Message.md  Crossposting a Message.md  Deleting a Message.md  Editing a Message.md  Getting Channel Messages.md  Getting Pinned Messages.md  Getting a Message.md  Pinning a Message.md  UnPinning a Message.md
Documentation/Doxygen/Docs/documentation_examples/modals/: Collecting Modal Input.md  Instantiating-Creating a Modal.md
Documentation/Doxygen/Docs/documentation_examples/music_bot/: Clear.md  Disconnect.md  Help.md  HelperFunctions.md  LoopAll.md  LoopSong.md  Np.md  Pause.md  Play.md  PlayQ.md  PlayRN.md  Queue.md  SetMusicChannel.md  Skip.md  Stop.md
Documentation/Doxygen/Docs/documentation_examples/reactions/: Creating a Guild Emoji.md  Creating a Reaction.md  Deleting All Reactions For Emoji.md  Deleting All Reactions.md  Deleting Own Reaction.md  Deleting User Reaction.md  Deleting a Guild Emoji.md  Getting Reactions.md  Getting a Guild Emoji.md  Getting a List of Guild Emoji.md  Modifying a Guild Emoji.md
Documentation/Doxygen/Docs/documentation_examples/roles/: Adding a Role to a Guild Member.md  (+7 more)
Include/rtc_rest/: Base.hpp  Config.hpp  HttpsClient.hpp  Index.hpp  RateLimitQueue.hpp  RingBuffer.hpp  TCPConnection.hpp  UnboundedMessageBlock.hpp
Tests/: CMakeLists.txt  main.cpp
Vcpkg/ports/discordcoreapi/: portfile.cmake  vcpkg.json
(+49 files in other folders)
